[package]
name = "imgsampler"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Required for wgpu v0.10 feature resolution.
resolver = "2"

[dependencies]
nannou = "0.19"
nannou_egui = "0.19"
rand = "0.8"
nom = "7.1"